Add inlfated statistic for fits.

--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +311,69 @@
     "    y = np.minimum(yfc, yfm)\n",
     "    y = np.maximum(y, 0)  # Cap in case of rounding or root finding errors\n",
     "    return chi2.isf(y, df=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import njit\n",
+    "\n",
+    "@njit()\n",
+    "def _fix(cov):\n",
+    "    changed = True\n",
+    "    while changed:\n",
+    "        changed = False\n",
+    "        for k in range(0, len(cov)):\n",
+    "            for l in range(k + 1, len(cov)):\n",
+    "                # pivot point k, l\n",
+    "                pivot = np.sign(cov[k, l])\n",
+    "                if not np.isfinite(pivot):\n",
+    "                    continue\n",
+    "                if np.all(np.isfinite(cov[k, :])) and np.all(np.isfinite(cov[:, l])):\n",
+    "                    continue\n",
+    "                for m in range(len(cov)):\n",
+    "                    if np.isfinite(cov[k, m]) and not np.isfinite(cov[m, l]):\n",
+    "                        if cov[k, m] != 0 or pivot != 0:\n",
+    "                            cov[l, m] = cov[m, l] = np.sign(cov[k, m] * pivot)\n",
+    "                            changed = True\n",
+    "                    elif not np.isfinite(cov[k, m]) and np.isfinite(cov[m, l]):\n",
+    "                        if cov[m, l] != 0 or pivot != 0:\n",
+    "                            cov[m, k] = cov[k, m] = np.sign(cov[m, l] * pivot)\n",
+    "                            changed = True\n",
+    "    return cov\n",
+    "\n",
+    "\n",
+    "def fill_max_correlation(cor, target):\n",
+    "    \"\"\"Fill the correlation matrix with elements to achieve maximum correlation.\n",
+    "\n",
+    "    Try to match the signs in \"target\".\n",
+    "\n",
+    "    Only replaces elements in \"cor\" that are NaN\n",
+    "    \"\"\"\n",
+    "\n",
+    "    priority = np.unravel_index(\n",
+    "        np.argsort(np.abs(target), axis=None)[::-1], target.shape\n",
+    "    )\n",
+    "\n",
+    "    for i, j in zip(*priority):\n",
+    "        if np.isfinite(cor[i, j]):\n",
+    "            continue\n",
+    "\n",
+    "        # Set the new element\n",
+    "        if target[i, j] == 0:\n",
+    "            t = 1\n",
+    "        else:\n",
+    "            t = np.sign(target[i, j])\n",
+    "\n",
+    "        cor[i, j] = cor[j, i] = t\n",
+    "\n",
+    "        # Check and fix connections to other elements\n",
+    "        cor = _fix(cor)\n",
+    "\n",
+    "    return cor"
    ]
   },
   {
