Add test with NuStatTools library version of derating.

--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -15,9 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Naive uncorrealted chi2\n",
-    "def naive(data):\n",
-    "    return np.sum(data**2, axis=-1)"
+    "# Naive (uncorrealted) chi2\n",
+    "def naive(data, cov=None):\n",
+    "    if cov is None:\n",
+    "        return np.sum(data**2, axis=-1)\n",
+    "    else:\n",
+    "        cov_inv = np.linalg.inv(cov)\n",
+    "        return np.einsum(\"...i,ij,...j\", data, cov_inv, data)"
    ]
   },
   {
@@ -27,8 +31,8 @@
    "outputs": [],
    "source": [
     "# Naive uncorrealted chi2 with inflated errors\n",
-    "def inflated(data, alpha=1.0):\n",
-    "    return np.sum(data**2, axis=-1) / alpha"
+    "def inflated(data, alpha=1.0, cov=None):\n",
+    "    return naive(data, cov=cov) / alpha"
    ]
   },
   {
