Test fitted test statistic with "benchmark" paper.

--- a/covfit.ipynb
+++ b/covfit.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.stats import chi2"
    ]
   },
   {
@@ -43,16 +44,42 @@
    "source": [
     "# Calculate \"chi2\" w/ fitted correlation\n",
     "def fitted(data, k=None):\n",
+    "    d2 = data**2\n",
     "    if k is None:\n",
-    "        return np.max(data**2, axis=-1)\n",
+    "        return np.max(d2, axis=-1)\n",
     "    else:\n",
     "        y = []\n",
     "        for i, ni in enumerate(k):\n",
     "            bi = int(np.sum(k[:i]))\n",
-    "            d2 = data**2\n",
     "            y.append(np.sum(d2[..., bi : bi + ni], axis=-1))\n",
     "        return np.max(y, axis=0)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select smallest p-value from blocks\n",
+    "# Calculate new p-value assuming no correaltions between the p-values\n",
+    "def min_p(data, k=None):\n",
+    "    d2 = data**2\n",
+    "    # get smallest p-value\n",
+    "    # q = 1-p\n",
+    "    if k is None:\n",
+    "        q = chi2(df=1).cdf(np.max(d2, axis=-1))\n",
+    "        n = data.shape[-1]\n",
+    "    else:\n",
+    "        n = len(k)\n",
+    "        y = np.zeros(data.shape[:-1] + (n,))\n",
+    "        for i, ni in enumerate(k):\n",
+    "            bi = int(np.sum(k[:i]))\n",
+    "            y[..., i] = chi2(df=ni).cdf(np.sum(d2[..., bi : bi + ni], axis=-1))\n",
+    "        q = np.max(y, axis=-1)\n",
+    "    \n",
+    "    return q**n"
    ]
   },
   {
