--- a/benchmark_paper.ipynb
+++ b/benchmark_paper.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from nustattools.stats import DF, cee, cee2\n",
+    "from nustattools.stats import DF, cee, cee2, OptimalFMaxStatistic\n",
     "from scipy.stats import chi2\n",
     "\n",
     "# https://arxiv.org/abs/2407.10962"
@@ -176,7 +176,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6113c849-68c3-450c-9fd4-c3be90c9e9e4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,16 +214,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd712fd4-2549-4ee0-aab6-b42c34ad1d7c",
+   "execution_count": 7,
+   "id": "859eb8e8-2061-4579-b0fb-7386d4e3dfc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SF/SF*\n",
+      "LFG\n",
+      "RFG\n",
+      "More 2p2h\n",
+      "More FSI\n",
+      "Less FSI\n",
+      "More pi abs.\n",
+      "Less pi abs.\n",
+      "GENIE\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in data.columns:\n",
+    "    if model in (\"Measurement\", \"N_bins\"):\n",
+    "        continue\n",
+    "    print(model)\n",
+    "    res = {}\n",
+    "    bins = {}\n",
+    "    for combo in combinations:\n",
+    "        measurements = get_measurements(combo)\n",
+    "\n",
+    "        # Get measurements that should be combined\n",
+    "        dat = data.loc[data[\"Measurement\"].isin(measurements)]\n",
+    "        # Filter out NaNs\n",
+    "        dat = dat.loc[dat[model].notnull()]\n",
+    "\n",
+    "        # At least 2 data points left?\n",
+    "        if len(dat.index) < 2:\n",
+    "            continue\n",
+    "\n",
+    "        # Get minimum p value\n",
+    "        p = []\n",
+    "        for n, M2 in zip(dat[\"N_bins\"], dat[model]):\n",
+    "            p.append(chi2(df=n).sf(M2))\n",
+    "            \n",
+    "        p_min = np.min(p)\n",
+    "        \n",
+    "        # Calculate and store p value\n",
+    "        res[combo] = 1 - (1-p_min)**len(p)\n",
+    "\n",
+    "    if len(res) > 0:\n",
+    "        results[model] = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6233dad0-0aa3-4a23-ac5e-65e8715fe2ab",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measurements & SF/SF* & LFG & RFG & More 2p2h & More FSI & Less FSI & GENIE \\\\\n",
+      "\\hline\n",
+      "T2K & 0.024 (2) &  &  &  & 0.009 (2) & 0.032 (2) &  \\\\\n",
+      "MINERvA & 0.000 (2) & 0.000 (2) & 0.000 (2) &  &  &  &  \\\\\n",
+      "MicroBooNE & 0.034 (2) & 0.659 (2) & 0.006 (2) &  & 0.332 (2) & 0.001 (2) &  \\\\\n",
+      "MicroBooNE all & 0.099 (6) & 0.576 (6) & 0.017 (6) & 0.480 (5) & 0.414 (6) & 0.004 (6) & 0.630 (5) \\\\\n",
+      "T2K+MicroBooNE & 0.047 (4) & 0.801 (3) & 0.000 (3) & 0.000 (2) & 0.017 (4) & 0.003 (4) & 0.721 (2) \\\\\n",
+      "T2K+MicroBooNE all & 0.092 (8) & 0.633 (7) & 0.000 (7) & 0.000 (6) & 0.034 (8) & 0.005 (8) & 0.697 (6) \\\\\n",
+      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.013 (7) \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = list(results.keys())\n",
+    "\n",
+    "print(\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
+    "print(r\"\\hline\")\n",
+    "for comb in combinations:\n",
+    "    line = rf\"{comb}\"\n",
+    "    for model in models:\n",
+    "        if comb in results[model]:\n",
+    "            line += rf\" & {results[model][comb]:.3f} ({len(n_bins[model][comb])})\"\n",
+    "        else:\n",
+    "            line += rf\" & \"\n",
+    "    line += r\" \\\\\"\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c7d6da55-cfaa-4b34-b67d-87d4b26dd5de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SF/SF*\n",
+      "LFG\n",
+      "RFG\n",
+      "More 2p2h\n",
+      "More FSI\n",
+      "Less FSI\n",
+      "More pi abs.\n",
+      "Less pi abs.\n",
+      "GENIE\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in data.columns:\n",
+    "    if model in (\"Measurement\", \"N_bins\"):\n",
+    "        continue\n",
+    "    print(model)\n",
+    "    res = {}\n",
+    "    bins = {}\n",
+    "    for combo in combinations:\n",
+    "        measurements = get_measurements(combo)\n",
+    "\n",
+    "        # Get measurements that should be combined\n",
+    "        dat = data.loc[data[\"Measurement\"].isin(measurements)]\n",
+    "        # Filter out NaNs\n",
+    "        dat = dat.loc[dat[model].notnull()]\n",
+    "\n",
+    "        # At least 2 data points left?\n",
+    "        if len(dat.index) < 2:\n",
+    "            continue\n",
+    "\n",
+    "        # Get optimal fmax statistic\n",
+    "        k = np.array(dat[\"N_bins\"])\n",
+    "        fmax = OptimalFMaxStatistic(k=k)\n",
+    "            \n",
+    "        t_max = fmax(dat[model])\n",
+    "        \n",
+    "        # Calculate and store p value\n",
+    "        res[combo] = 1 - fmax.cdf(t_max)\n",
+    "        \n",
+    "    if len(res) > 0:\n",
+    "        results[model] = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a9b9e749-d905-4da5-9d65-83ec029905fb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measurements & SF/SF* & LFG & RFG & More 2p2h & More FSI & Less FSI & GENIE \\\\\n",
+      "\\hline\n",
+      "T2K & 0.024 (2) &  &  &  & 0.009 (2) & 0.032 (2) &  \\\\\n",
+      "MINERvA & 0.000 (2) & 0.000 (2) & 0.000 (2) &  &  &  &  \\\\\n",
+      "MicroBooNE & 0.038 (2) & 0.605 (2) & 0.005 (2) &  & 0.373 (2) & 0.001 (2) &  \\\\\n",
+      "MicroBooNE all & 0.114 (6) & 0.556 (6) & 0.016 (6) & 0.473 (5) & 0.398 (6) & 0.004 (6) & 0.622 (5) \\\\\n",
+      "T2K+MicroBooNE & 0.049 (4) & 0.740 (3) & 0.000 (3) & 0.000 (2) & 0.018 (4) & 0.003 (4) & 0.772 (2) \\\\\n",
+      "T2K+MicroBooNE all & 0.099 (8) & 0.605 (7) & 0.000 (7) & 0.000 (6) & 0.037 (8) & 0.006 (8) & 0.678 (6) \\\\\n",
+      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.011 (7) \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = list(results.keys())\n",
+    "\n",
+    "print(\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
+    "print(r\"\\hline\")\n",
+    "for comb in combinations:\n",
+    "    line = rf\"{comb}\"\n",
+    "    for model in models:\n",
+    "        if comb in results[model]:\n",
+    "            line += rf\" & {results[model][comb]:.3f} ({len(n_bins[model][comb])})\"\n",
+    "        else:\n",
+    "            line += rf\" & \"\n",
+    "    line += r\" \\\\\"\n",
+    "    print(line)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe62f939-52a3-4733-9b03-4e405a87d7d3",
+   "id": "30915c3b-33a3-40d0-b303-329f3443b56e",
    "metadata": {},
    "outputs": [],
    "source": []
