--- a/benchmark_paper.ipynb
+++ b/benchmark_paper.ipynb
@@ -184,23 +184,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\\toprule\n",
       "Measurements & SF/SF* & LFG & RFG & More 2p2h & More FSI & Less FSI & GENIE \\\\\n",
-      "\\hline\n",
+      "\\midrule\n",
       "T2K & 0.024 (2) &  &  &  & 0.009 (2) & 0.032 (2) &  \\\\\n",
       "MINERvA & 0.000 (2) & 0.000 (2) & 0.000 (2) &  &  &  &  \\\\\n",
       "MicroBooNE & 0.109 (2) & 0.452 (2) & 0.003 (2) &  & 0.251 (2) & 0.021 (2) &  \\\\\n",
       "MicroBooNE all & 0.135 (6) & 0.456 (6) & 0.011 (6) & 0.421 (5) & 0.312 (6) & 0.021 (6) & 0.569 (5) \\\\\n",
       "T2K+MicroBooNE & 0.129 (4) & 0.506 (3) & 0.000 (3) & 0.001 (2) & 0.061 (4) & 0.024 (4) & 0.808 (2) \\\\\n",
       "T2K+MicroBooNE all & 0.140 (8) & 0.466 (7) & 0.000 (7) & 0.004 (6) & 0.200 (8) & 0.021 (8) & 0.580 (6) \\\\\n",
-      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.000 (9) & 0.000 (9) & 0.002 (7) \\\\\n"
+      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.000 (9) & 0.000 (9) & 0.002 (7) \\\\\n",
+      "\\bottomrule\n"
      ]
     }
    ],
    "source": [
     "models = list(results.keys())\n",
     "\n",
-    "print(\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
-    "print(r\"\\hline\")\n",
+    "print(r\"\\toprule\")\n",
+    "print(r\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
+    "print(r\"\\midrule\")\n",
     "for comb in combinations:\n",
     "    line = rf\"{comb}\"\n",
     "    for model in models:\n",
@@ -209,7 +212,8 @@
     "        else:\n",
     "            line += rf\" & \"\n",
     "    line += r\" \\\\\"\n",
-    "    print(line)"
+    "    print(line)\n",
+    "print(r\"\\bottomrule\")"
    ]
   },
   {
@@ -270,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6233dad0-0aa3-4a23-ac5e-65e8715fe2ab",
+   "id": "2cd5b2ea-cd97-4176-9130-d312e51c367e",
    "metadata": {
     "tags": []
    },
@@ -279,23 +283,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\\toprule\n",
       "Measurements & SF/SF* & LFG & RFG & More 2p2h & More FSI & Less FSI & GENIE \\\\\n",
-      "\\hline\n",
+      "\\midrule\n",
       "T2K & 0.024 (2) &  &  &  & 0.009 (2) & 0.032 (2) &  \\\\\n",
       "MINERvA & 0.000 (2) & 0.000 (2) & 0.000 (2) &  &  &  &  \\\\\n",
       "MicroBooNE & 0.034 (2) & 0.659 (2) & 0.006 (2) &  & 0.332 (2) & 0.001 (2) &  \\\\\n",
       "MicroBooNE all & 0.099 (6) & 0.576 (6) & 0.017 (6) & 0.480 (5) & 0.414 (6) & 0.004 (6) & 0.630 (5) \\\\\n",
       "T2K+MicroBooNE & 0.047 (4) & 0.801 (3) & 0.000 (3) & 0.000 (2) & 0.017 (4) & 0.003 (4) & 0.721 (2) \\\\\n",
       "T2K+MicroBooNE all & 0.092 (8) & 0.633 (7) & 0.000 (7) & 0.000 (6) & 0.034 (8) & 0.005 (8) & 0.697 (6) \\\\\n",
-      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.013 (7) \\\\\n"
+      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.013 (7) \\\\\n",
+      "\\bottomrule\n"
      ]
     }
    ],
    "source": [
     "models = list(results.keys())\n",
     "\n",
-    "print(\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
-    "print(r\"\\hline\")\n",
+    "print(r\"\\toprule\")\n",
+    "print(r\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
+    "print(r\"\\midrule\")\n",
     "for comb in combinations:\n",
     "    line = rf\"{comb}\"\n",
     "    for model in models:\n",
@@ -304,7 +311,8 @@
     "        else:\n",
     "            line += rf\" & \"\n",
     "    line += r\" \\\\\"\n",
-    "    print(line)"
+    "    print(line)\n",
+    "print(r\"\\bottomrule\")"
    ]
   },
   {
@@ -364,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9b9e749-d905-4da5-9d65-83ec029905fb",
+   "id": "d5eac56d-137d-4aff-ada1-4aa7176b7e74",
    "metadata": {
     "tags": []
    },
@@ -373,23 +381,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\\toprule\n",
       "Measurements & SF/SF* & LFG & RFG & More 2p2h & More FSI & Less FSI & GENIE \\\\\n",
-      "\\hline\n",
+      "\\midrule\n",
       "T2K & 0.024 (2) &  &  &  & 0.009 (2) & 0.032 (2) &  \\\\\n",
       "MINERvA & 0.000 (2) & 0.000 (2) & 0.000 (2) &  &  &  &  \\\\\n",
       "MicroBooNE & 0.038 (2) & 0.605 (2) & 0.005 (2) &  & 0.373 (2) & 0.001 (2) &  \\\\\n",
       "MicroBooNE all & 0.114 (6) & 0.556 (6) & 0.016 (6) & 0.473 (5) & 0.398 (6) & 0.004 (6) & 0.622 (5) \\\\\n",
       "T2K+MicroBooNE & 0.049 (4) & 0.740 (3) & 0.000 (3) & 0.000 (2) & 0.018 (4) & 0.003 (4) & 0.772 (2) \\\\\n",
       "T2K+MicroBooNE all & 0.099 (8) & 0.605 (7) & 0.000 (7) & 0.000 (6) & 0.037 (8) & 0.006 (8) & 0.678 (6) \\\\\n",
-      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.011 (7) \\\\\n"
+      "all & 0.000 (10) & 0.000 (9) & 0.000 (9) & 0.000 (7) & 0.001 (9) & 0.000 (9) & 0.011 (7) \\\\\n",
+      "\\bottomrule\n"
      ]
     }
    ],
    "source": [
     "models = list(results.keys())\n",
     "\n",
-    "print(\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
-    "print(r\"\\hline\")\n",
+    "print(r\"\\toprule\")\n",
+    "print(r\"Measurements & \" + \" & \".join(models) + r\" \\\\\")\n",
+    "print(r\"\\midrule\")\n",
     "for comb in combinations:\n",
     "    line = rf\"{comb}\"\n",
     "    for model in models:\n",
@@ -398,7 +409,8 @@
     "        else:\n",
     "            line += rf\" & \"\n",
     "    line += r\" \\\\\"\n",
-    "    print(line)"
+    "    print(line)\n",
+    "print(r\"\\bottomrule\")"
    ]
   },
   {
